--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="shortcut icon" href="to-do-list.png" type="image/x-icon">
 </head>
 <body>
+    <div class="container">
+        <div class="todo-app">
+            <h2>To-Do List <img src="images/icon.png"></h2>
+        </div>
+    </div>
   <script src="script.js"></script>  
 </body>
 </html>
