--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <div class="container">
         <div class="todo-app">
             <h2>To-Do List <img src="images/icon.png"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text">
+                <button>Add</button>
+            </div>
+            <ul id="list-container">
+                <li>Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li>
+            </ul>
         </div>
     </div>
   <script src="script.js"></script>  
